Dummy-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb
  namespace: dummy-app
  labels:
    app: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello-app
          image: gcr.io/google-samples/hello-app:1.0
          ports:
            - containerPort: 8080
