Dummy-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: dummy-app
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
